--- a/src/css/quasar.variables.scss
+++ b/src/css/quasar.variables.scss
@@ -1,17 +1,4 @@
 
-$primary   : #571aff;
-$secondary : #dfdfed;
-$accent    : #ffd75e;
-
-$dark      : #010035;
-
-$positive  : #55c3b3;
-$negative  : #ff422a;
-$info      : #dfdfed;
-$warning   : #F2C037;
-$purpleDarkMode : #3d1d74;
-
-
 $purpleBright   : #814cdc;
 $purpleDarkMode : #3d1d74;
 $purpleDark     : #23195e;
@@ -35,11 +22,11 @@ $primary   : #814cdc;
 $secondary : #e3def7;
 $accent    : #2fd7fe;
 
-$dark      : #23195e;
+$dark      : #392f70;
 
 $positive  : #55c3b3;
 $negative  : #bd2677;
-$info      : #e3def7;
+$info      : #452ea3;
 $warning   : #F2C037;
 
 // Corner radius
