--- a/src/css/quasar.variables.scss
+++ b/src/css/quasar.variables.scss
@@ -22,7 +22,7 @@ $primary   : #814cdc;
 $secondary : #e3def7;
 $accent    : #2fd7fe;
 
-$dark      : #392f70;
+$dark      : #282828;
 
 $positive  : #55c3b3;
 $negative  : #bd2677;
