Improved homepage banner style

--- a/src/css/quasar.variables.scss
+++ b/src/css/quasar.variables.scss
@@ -18,7 +18,8 @@ $dark-1         : #23195e;
 $grey-0         : #d4ceeb;
 
 // Presets
-$primary   : #814cdc;
+// $primary   : #814cdc;
+$primary   : #4190EB;
 $secondary : #e3def7;
 $accent    : #2fd7fe;
 
