--- a/src/css/app.scss
+++ b/src/css/app.scss
@@ -162,32 +162,13 @@ body.body--dark {
   
 }
 
-.onTop{
-  z-index: 10;
+.tabsBar{
+  color: rgb(133,145,253);
 }
 
-
-.bg {
-  background: url(https://i.ibb.co/87GbbFP/2799006.jpg) no-repeat;
-  background-size: cover;
-  height: 400px;
-  width: 100%;
-  position: fixed;
-  top: 0;
-  left: 0;
-  z-index: -3;
+.homeInfo{
+  color:white;
 }
 
-.bg:before {
-    content: "";
-    width: 100%;
-    height: 400px;
-    background: linear-gradient(180deg, rgba(37, 42, 94, 1) 0%, rgba(35, 41, 96, 1) 48%, rgba(45, 70, 132, 1) 100%);
-    position: fixed;
-    z-index: -1;
-    top: 0;
-    left: 0;
-    opacity: 0.9;
-}
 
 
