--- a/src/css/app.scss
+++ b/src/css/app.scss
@@ -188,3 +188,25 @@ body.body--dark {
 .homeInfo {
   color: white;
 }
+
+.dataCardsContainer {
+  display: flex;
+  gap: 10px;
+  .dataCardItem {
+    background: #ffffff1e;
+    width: 7rem;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+  }
+  .dataCardTile {
+    color: $white;
+    font-size: 0.8rem;
+  }
+  .dataCardData {
+    color: $primary;
+    font-size: 1.3rem;
+    line-height: 1.5rem;
+  }
+}
