--- a/src/css/app.scss
+++ b/src/css/app.scss
@@ -1,3 +1,5 @@
+@import url("./dataCard.scss");
+
 a {
   color: rgb(100, 111, 211);
   text-decoration: none;
@@ -187,26 +189,4 @@ body.body--dark {
 
 .homeInfo {
   color: white;
-}
-
-.dataCardsContainer {
-  display: flex;
-  gap: 10px;
-  .dataCardItem {
-    background: #ffffff1e;
-    width: 7rem;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-  }
-  .dataCardTile {
-    color: $white;
-    font-size: 0.8rem;
-  }
-  .dataCardData {
-    color: $primary;
-    font-size: 1.3rem;
-    line-height: 1.5rem;
-  }
 }
