--- a/src/css/quasar.variables.scss
+++ b/src/css/quasar.variables.scss
@@ -20,8 +20,9 @@ $grey-0         : #d4ceeb;
 // Presets
 // $primary   : #814cdc;
 $primary   : #4190EB;
-$secondary : #e3def7;
+$secondary : rgb(133, 145, 253);
 $accent    : #2fd7fe;
+$lightPurple : rgb(133, 145, 253);
 
 $dark      : #282828;
 
