--- a/src/css/app.scss
+++ b/src/css/app.scss
@@ -39,6 +39,8 @@ body.body--light {
 
   .jsonViewer {
     color: $purpleDarkMode;
+    max-width: 100vw;
+    overflow:scroll;
   }
 
   .toolbar {
@@ -145,22 +147,43 @@ body.body--dark {
   }
 }
 
+.scroll {
+  /* custom scrollbar */
+  &::-webkit-scrollbar {
+    width: 0.5rem;
+
+  }
+  &::-webkit-scrollbar-track {
+    background-color: transparent;
+  }
+  &::-webkit-scrollbar-thumb {
+    // background-color: #d6dee1;
+    background-color: rgba($white, 0.5);
+    border-radius: 1rem;
+    border: 0.1rem solid transparent;
+    background-clip: content-box;
+  }
+  &::-webkit-scrollbar-thumb:hover {
+    background-color: rgba($white, 0.9);
+  }
+}
+
 // Cards & Dialogs
 
 .q-dialog__inner > div {
-  border-radius: 15px;
+  border-radius: 10px;
 }
 
 .ContentContainer {
-  border-radius: 15px;
+  border-radius: 10px;
 }
 
 .topRounded {
-  border-radius: 15px 15px 0px 0px;
+  border-radius: 10px 10px 0px 0px;
 }
 
 .botRounded {
-  border-radius: 0px 0px 15px 15px;
+  border-radius: 0px 0px 10px 15px;
 }
 
 @media only screen and (max-width: 550px) {
@@ -172,9 +195,7 @@ body.body--dark {
   }
 }
 
-::-webkit-scrollbar {
-  display: none;
-}
+
 
 .taskbarSearch {
   max-width: 300px;
@@ -190,8 +211,23 @@ body.body--dark {
 
 .homeInfo {
   color: white;
+  max-width: 100vw;
+  overflow:scroll;
+
 }
 
 .tableWrapper {
   max-width: 100vw;
+  padding-left: 5px;
+  padding-right: 5px;
+}
+
+.jv-code{
+  overflow: scroll !important;
+}
+
+.mobile{
+  ::-webkit-scrollbar {
+    display: none;
+  }
 }
