--- a/src/css/app.scss
+++ b/src/css/app.scss
@@ -17,6 +17,43 @@ a {
   color: $purpleDarkMode;
 }
 
+//@DUMMY MODS 
+.q-header{
+  margin:10px
+}
+
+.q-table thead tr, .q-table tbody td{
+  height:60px;
+}
+
+.q-tabs--dense .q-tab {
+  min-height: 53px;
+  border-radius: 0px;
+}
+
+.q-mb-lg{
+  margin-top:20px;
+}
+
+.text-h4 {
+  line-height: 2rem;
+}
+
+.shadow-2{
+  box-shadow: none !important;
+}
+
+.q-mb-md {
+  margin-bottom: auto;
+  margin-top: 0px !important;
+}
+
+//@DUMMY MODS END
+
+.q-table--dark .q-table__bottom, .q-table--dark thead, .q-table--dark tr, .q-table--dark th, .q-table--dark td {
+  border-color: rgb(0 0 0 / 50%);
+}
+
 // Fonts
 body {
   font-family: "silkaregular";
@@ -176,8 +213,8 @@ body.body--dark {
   border-radius: 10px;
 }
 
-.content-container {
-  border-radius: 10px;
+.tableWrapper .content-container {
+  border-radius: 0px 0px 10px 10px;
 }
 
 .topRounded {
@@ -196,7 +233,6 @@ body.body--dark {
     font-size: 1.2rem;
   }
 }
-
 
 
 .taskbarSearch {
@@ -222,6 +258,7 @@ body.body--dark {
   max-width: 100vw;
   padding-left: 5px;
   padding-right: 5px;
+  margin-top:17.5px;
 }
 
 .jv-code{
