--- a/src/css/dataCard.scss
+++ b/src/css/dataCard.scss
@@ -2,13 +2,14 @@
   display: flex;
   gap: 10px;
   .dataCardItem {
-    background: #ffffff1e;
+    background: #0000001e;
     width: 7rem;
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
     border-radius: 10px;
+    padding:20px;
   }
   .dataCardTile {
     color: $white;
