@dummy subtle ui change + responsive

--- a/src/css/dataCard.scss
+++ b/src/css/dataCard.scss
@@ -2,13 +2,14 @@
   display: flex;
   gap: 10px;
   .dataCardItem {
-    background: #ffffff1e;
+    background: #0000001e;
     width: 7rem;
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
     border-radius: 10px;
+    padding:20px;
   }
   .dataCardTile {
     color: $white;
@@ -22,4 +23,29 @@
   .balance{
     width: fit-content;
   }
+}
+
+@media screen and (max-width: 650px) {
+  .homeInfo {
+      color: white;
+      max-width: 100vw;
+      overflow: scroll;
+      font-size: 12px !important;
+  }
+  .dataCardItem{
+    padding: 10px !important;
+    margin-top:-12px;
+  }
+
+  .text-h4.text-primary.q-mb-lg {
+    line-height: 0rem !important;
+  }
+
+  .q-header{
+    margin: 0px 0px !important;
+  }
+  
+  .q-btn__wrapper {
+    padding: 4px !important
+}
 }
