--- a/src/css/app.scss
+++ b/src/css/app.scss
@@ -18,6 +18,7 @@ a {
 }
 
 //@DUMMY MODS 
+
 .q-header{
   margin:10px
 }
@@ -268,5 +269,28 @@ body.body--dark {
 
 ::-webkit-scrollbar {
   display: none;
+}
+
+// Responsive 
+
+@media screen and (max-width: 650px) {
+  .homeInfo {
+      color: white;
+      max-width: 100vw;
+      overflow: scroll;
+      font-size: 12px !important;
+  }
+
+  .text-h4.text-primary.q-mb-lg {
+    line-height: 0rem !important;
+  }
+
+  .q-header{
+    margin: 0px 0px !important;
+  }
+  
+  .q-btn__wrapper {
+    padding: 4px !important
+}
 }
 
