--- a/src/css/dataCard.scss
+++ b/src/css/dataCard.scss
@@ -10,6 +10,7 @@
     justify-content: center;
     border-radius: 10px;
     padding:20px;
+    border: 1px solid rgb(73 70 112);
   }
   .dataCardTile {
     color: $white;
