--- a/src/css/app.scss
+++ b/src/css/app.scss
@@ -27,6 +27,10 @@ a {
   height:60px;
 }
 
+.q-tabs{
+  border-bottom-width: 1px;
+}
+
 .q-tabs--dense .q-tab {
   min-height: 53px;
 }
@@ -256,8 +260,6 @@ body.body--dark {
 
 .tableWrapper {
   max-width: 100vw;
-  padding-left: 5px;
-  padding-right: 5px;
   margin-top:17.5px;
 }
 
