refactor: all templates use pug, consistent order of component elements

--- a/src/css/jsonViewerTheme.sass
+++ b/src/css/jsonViewerTheme.sass
@@ -1,4 +1,6 @@
 /* to apply set theme='custom-theme' on JsonViewer component */
+@import './quasar.variables.sass'
+
 body.body--dark .custom-theme 
   color: $white
   background-color: black
