refactor: more pug, tab styling

--- a/src/css/app.sass
+++ b/src/css/app.sass
@@ -159,13 +159,16 @@ body.body--dark
   border-radius: 10px
 
 .tableWrapper .content-container 
-  border-radius: 0px 0px 10px 10px
+  border-radius: 10px
 
-.topRounded 
-  border-radius: 10px 10px 0px 0px
+.q-tabs.topRounded 
+  border-radius: 10px 10px 0 0
 
-.botRounded 
-  border-radius: 0px 0px 10px 15px
+.topLeftRounded
+  border-radius: 10px 0 0 0
+
+  .topRightRounded 
+  border-radius: 0 10px 0 0
 
 .taskbarSearch
   max-width: 300px
