feat: split up read & write

--- a/src/css/app.sass
+++ b/src/css/app.sass
@@ -163,6 +163,7 @@ body.body--dark
 
 .q-tabs.topRounded 
   border-radius: 10px 10px 0 0
+  border-bottom: 1px solid black
 
 .topLeftRounded
   border-radius: 10px 0 0 0
