--- a/src/css/quasar.variables.sass
+++ b/src/css/quasar.variables.sass
@@ -1,5 +1,5 @@
 
-$purpleBright   :#814cdc
+$purpleBright   : #814cdc
 $purpleDarkMode : #3d1d74
 $purpleDark     : #23195e
 $purpleSoft     : #7772ac
@@ -30,3 +30,7 @@ $warning        : #F2C037
 
 $button-border-radius   : 15px !default
 $generic-border-radius  : 10px !default
+
+// eztodo address & remove
+// green #4aa956
+// red -> more saturated red
