--- a/src/css/app.sass
+++ b/src/css/app.sass
@@ -1,10 +1,11 @@
 @import './dataCard.sass'
+@import './utilities.scss'
 
 a
  color: rgb(100, 111, 211)
  text-decoration: none
 
-.toolbar 
+.toolbar
   background: radial-gradient( circle at 50% 50%, rgba(97, 8, 183, 1) 1%, rgba(0, 188, 212, 1) 53%, rgba(213, 109, 213, 1) 100%)
   color: $purpleDarkMode
 
@@ -29,25 +30,21 @@ a
 .shadow-2
   box-shadow: none !important
 
-.q-mb-md 
-  margin-bottom: auto
-  margin-top: 0px !important
-
 .q-light
   background: white
   .q-tab
     color: black
 
-.q-table--dark .q-table__bottom, .q-table--dark thead, .q-table--dark tr, .q-table--dark th, .q-table--dark td 
+.q-table--dark .q-table__bottom, .q-table--dark thead, .q-table--dark tr, .q-table--dark th, .q-table--dark td
   border-color: rgb(0 0 0 / 50%)
 
-body 
+body
   font-family: "silkaregular"
 
-body.body--light 
+body.body--light
   background: #fafafa
 
-  .bgNormal 
+  .bgNormal
     background: white
     background-size: cover
     margin-top: 400px
@@ -57,22 +54,22 @@ body.body--light
     top: 0
     left: 0
     z-index: 0
-  
-  .jsonViewer 
+
+  .jsonViewer
     color: $purpleDarkMode
     max-width: 100vw
     overflow: scroll
 
-  .toolbar 
+  .toolbar
     background: rgb(127, 99, 255)
     color: $purpleDarkMode
 
-  .searchCard 
+  .searchCard
     padding: 1px
     background: radial-gradient(circle at 50% 50%, rgba(97, 8, 183, 1) 1%, rgba(0, 188, 212, 1) 53%, rgba(213, 109, 213, 1) 100%)
     border-radius: 10px
 
-    .q-input 
+    .q-input
       width: 100%
       font-size: 1.3rem
 
@@ -81,10 +78,10 @@ body.body--light
       background: #ffffff
       border-radius: 10px
 
-body.body--dark 
+body.body--dark
   color: $white
 
-  .bgNormal 
+  .bgNormal
     background: #1a1a1a
     background-size: cover
     margin-top: 400px
@@ -95,80 +92,80 @@ body.body--dark
     left: 0
     z-index: 0
 
-  .toolbar 
+  .toolbar
     background: #282828
 
-  .q-card 
+  .q-card
     padding: 0px
     background: $dark
     border-radius: 10px
 
-  .searchCard 
+  .searchCard
     padding: 1px
     background: radial-gradient(circle at 50% 50%, rgba(97, 8, 183, 1) 1%, rgba(0, 188, 212, 1) 53%, rgba(213, 109, 213, 1) 100%)
     border-radius: 10px
 
-    .q-input 
+    .q-input
       width: 100%
       font-size: 1.3rem
 
-    .searchCardSection 
+    .searchCardSection
       padding: 10px
       background: $dark
       border-radius: 10px
 
   background: #1a1a1a
 
-.pageContainer 
+.pageContainer
   flex: 0 1 1200px
   max-width: 1200px
 
-.slim-scrollbar 
-  &::-webkit-scrollbar 
+.slim-scrollbar
+  &::-webkit-scrollbar
     width: 0.5rem
 
-  &::-webkit-scrollbar-track 
+  &::-webkit-scrollbar-track
     background-color: transparent
 
-  &::-webkit-scrollbar-thumb 
-    background-color: rgba($white, 0.5)
-    border-radius: 1rem
-    border: 0.1rem solid transparent
-    background-clip: content-box
-  
-  &::-webkit-scrollbar-thumb:hover 
-    background-color: rgba($white, 0.9)
-
-.scroll 
-  &::-webkit-scrollbar 
-    width: 0.5rem
-
-  &::-webkit-scrollbar-track 
-    background-color: transparent
-  
-  &::-webkit-scrollbar-thumb 
+  &::-webkit-scrollbar-thumb
     background-color: rgba($white, 0.5)
     border-radius: 1rem
     border: 0.1rem solid transparent
     background-clip: content-box
 
-  &::-webkit-scrollbar-thumb:hover 
+  &::-webkit-scrollbar-thumb:hover
     background-color: rgba($white, 0.9)
-  
-.q-dialog__inner > div 
+
+.scroll
+  &::-webkit-scrollbar
+    width: 0.5rem
+
+  &::-webkit-scrollbar-track
+    background-color: transparent
+
+  &::-webkit-scrollbar-thumb
+    background-color: rgba($white, 0.5)
+    border-radius: 1rem
+    border: 0.1rem solid transparent
+    background-clip: content-box
+
+  &::-webkit-scrollbar-thumb:hover
+    background-color: rgba($white, 0.9)
+
+.q-dialog__inner > div
   border-radius: 10px
 
-.tableWrapper .content-container 
+.tableWrapper .content-container
   border-radius: 10px
 
-.q-tabs.topRounded 
+.q-tabs.topRounded
   border-radius: 10px 10px 0 0
   border-bottom: 1px solid black
 
 .topLeftRounded
   border-radius: 10px 0 0 0
 
-.topRightRounded 
+.topRightRounded
   border-radius: 0 10px 0 0
 
 .taskbarSearch
@@ -188,32 +185,31 @@ body.body--dark
 
 .tableWrapper
   max-width: 100vw
-  margin-top:17.5px
 
 .jv-code
   overflow: scroll !important
 
-::-webkit-scrollbar 
+::-webkit-scrollbar
   display: none
 
 @media only screen and (max-width: 550px)
   .selectorContainer .text-h6
     font-size: 0.8rem
-  .q-input 
+  .q-input
     font-size: 1.2rem
 
-@media screen and (max-width: 650px) 
-  .homeInfo 
+@media screen and (max-width: 650px)
+  .homeInfo
       color: white
       max-width: 100vw
       overflow: scroll
       font-size: 12px !important
 
-  .text-h4.text-primary.q-mb-lg 
+  .text-h4.text-primary.q-mb-lg
     line-height: 0rem !important
 
   .q-header
     margin: 0px 0px !important
-  
-  .q-btn__wrapper 
+
+  .q-btn__wrapper
     padding: 4px !important
