fix trailing zero logic, add loading state to inputs

--- a/src/css/utilities.scss
+++ b/src/css/utilities.scss
@@ -1,8 +1,14 @@
 /* General */
 .u-flex {
+    &--left,
     &--center,
     &--space-between {
         display: flex;
+    }
+
+    &--left {
+        justify-content: flex-start;
+        align-items: center;
     }
 
     &--center {
