--- a/src/css/quasar.variables.sass
+++ b/src/css/quasar.variables.sass
@@ -8,8 +8,8 @@ $blueDark       : #182244
 $blueDarkMode   : #0c1535
 $blueLight      : #2fd7fe
 $white          : #e3def7
-$red            : #bd2677
-$green          : #55c3b3
+$red            : #a62727
+$green          : #4aa956
 $yellow         : #F2C037
 
 $dark-0         : #1c075e
@@ -23,14 +23,10 @@ $accent         : #2fd7fe
 
 $dark           : #282828
 
-$positive       : #55c3b3
-$negative       : #bd2677
+$positive       : $green
+$negative       : $red
 $info           : #452ea3
 $warning        : #F2C037
 
 $button-border-radius   : 15px !default
 $generic-border-radius  : 10px !default
-
-// eztodo address & remove
-// green #4aa956
-// red -> more saturated red
