token transfers, human readable logs, css fixes

--- a/src/css/app.sass
+++ b/src/css/app.sass
@@ -186,6 +186,12 @@ body.body--dark
   max-width: 100vw
   overflow: scroll
 
+.positive
+  color: $positive
+
+.negative
+  color: $negative
+
 .tableWrapper
   max-width: 100vw
   margin-top:17.5px
