--- a/src/css/jsonViewerTheme.sass
+++ b/src/css/jsonViewerTheme.sass
@@ -1,13 +1,13 @@
 /* to apply set theme='custom-theme' on JsonViewer component */
 @import './quasar.variables.sass'
 
-body.body--dark .custom-theme 
-  color: $white
-  background-color: black
+body.body--dark .jsonViewer
+  color: white !important
+  background-color: transparent
 
-body.body--light .custom-theme
-  color: $purpleDarkMode
-  background-color: #eee
+body.body--light .jsonViewer
+  color: $dark !important
+  background-color: transparent
   
 body.body--dark .source-container
   background-color: black
