update stats styling

--- a/src/css/app.sass
+++ b/src/css/app.sass
@@ -16,6 +16,9 @@ a
 .q-table thead tr, .q-table tbody td
   height:60px
 
+.q-card
+  padding: 0
+
 .q-tabs
   border-bottom-width: 1px
 
@@ -97,7 +100,6 @@ body.body--dark
     background: #282828
 
   .q-card
-    padding: 0px
     background: $dark
     border-radius: 10px
 
