fix: style adjustments for icons

--- a/src/css/app.sass
+++ b/src/css/app.sass
@@ -119,6 +119,9 @@ body.body--dark
 
   background: #1a1a1a
 
+.info-icon
+    margin-left: 4px
+
 .pageContainer
   flex: 0 1 1200px
   max-width: 1200px
