fix: reduce border-radius

--- a/src/css/app.sass
+++ b/src/css/app.sass
@@ -19,6 +19,9 @@ a
 .q-card
   padding: 0
 
+.q-btn
+  border-radius: 4px
+
 .q-tabs
   border-bottom-width: 1px
 
@@ -71,7 +74,7 @@ body.body--light
   .searchCard
     padding: 1px
     background: radial-gradient(circle at 50% 50%, rgba(97, 8, 183, 1) 1%, rgba(0, 188, 212, 1) 53%, rgba(213, 109, 213, 1) 100%)
-    border-radius: 10px
+    border-radius: 6px
 
     .q-input
       width: 100%
@@ -80,7 +83,7 @@ body.body--light
     .searchCardSection
       padding: 10px
       background: #ffffff
-      border-radius: 10px
+      border-radius: 6px
 
 body.body--dark
   color: $white
@@ -101,12 +104,12 @@ body.body--dark
 
   .q-card
     background: $dark
-    border-radius: 10px
+    border-radius: 6px
 
   .searchCard
     padding: 1px
     background: radial-gradient(circle at 50% 50%, rgba(97, 8, 183, 1) 1%, rgba(0, 188, 212, 1) 53%, rgba(213, 109, 213, 1) 100%)
-    border-radius: 10px
+    border-radius: 6px
 
     .q-input
       width: 100%
@@ -115,7 +118,7 @@ body.body--dark
     .searchCardSection
       padding: 10px
       background: $dark
-      border-radius: 10px
+      border-radius: 6px
 
   background: #1a1a1a
 
@@ -135,7 +138,7 @@ body.body--dark
 
   &::-webkit-scrollbar-thumb
     background-color: rgba($white, 0.5)
-    border-radius: 1rem
+    border-radius: .5rem
     border: 0.1rem solid transparent
     background-clip: content-box
 
@@ -151,7 +154,7 @@ body.body--dark
 
   &::-webkit-scrollbar-thumb
     background-color: rgba($white, 0.5)
-    border-radius: 1rem
+    border-radius: .5rem
     border: 0.1rem solid transparent
     background-clip: content-box
 
@@ -159,20 +162,20 @@ body.body--dark
     background-color: rgba($white, 0.9)
 
 .q-dialog__inner > div
-  border-radius: 10px
+  border-radius: 6px
 
 .tableWrapper .content-container
-  border-radius: 10px
+  border-radius: 6px
 
 .q-tabs.topRounded
-  border-radius: 10px 10px 0 0
+  border-radius: 6px 6px 0 0
   border-bottom: 1px solid black
 
 .topLeftRounded
-  border-radius: 10px 0 0 0
+  border-radius: 6px 0 0 0
 
 .topRightRounded
-  border-radius: 0 10px 0 0
+  border-radius: 0 6px 0 0
 
 .taskbarSearch
   max-width: 300px
