cleanup: misc formatting

--- a/src/css/_utilities.scss
+++ b/src/css/_utilities.scss
@@ -1,5 +1,7 @@
 /* General */
 .u-flex {
+    $this: &;
+
     &--left,
     &--center,
     &--center-y,
@@ -7,6 +9,10 @@
     &--space-between {
         display: flex;
         align-items: center;
+
+        &#{$this}--inline {
+            display: inline-flex;
+        }
     }
 
     &--left {
