some css responsive fixes, commented staking route & link

--- a/src/css/app.sass
+++ b/src/css/app.sass
@@ -202,13 +202,10 @@ body.body--dark
 .tableWrapper
   max-width: 100vw
 
-@media only screen and (max-width: 550px)
-  .selectorContainer .text-h6
-    font-size: 0.8rem
-  .q-input
-    font-size: 1.2rem
-
 @media screen and (max-width: 650px)
+  body
+    font-size: 12px
+
   .homeInfo
       color: white
       max-width: 100vw
@@ -222,3 +219,9 @@ body.body--dark
 
   .q-btn__wrapper
     padding: 4px !important
+
+@media only screen and (max-width: 550px)
+  .selectorContainer .text-h6
+    font-size: 0.8rem
+  .q-input
+    font-size: 1.2rem
