css ellipsis label improvment, more array / tuple display improvments

--- a/src/css/app.sass
+++ b/src/css/app.sass
@@ -124,6 +124,21 @@ body.body--dark
 .info-icon
     margin-left: 4px
 
+.ellipsis-label
+  color: #999
+  background-color: #eee
+  display: inline-block
+  line-height: 6px
+  margin-left: 15px
+  height: 12px
+  font-size: 0.9em
+  padding: 0px 4px 2px 4px
+  border-radius: 3px
+  vertical-align: 2px
+  cursor: pointer
+  -webkit-user-select: none
+  user-select: none
+
 .pageContainer
   flex: 0 1 1200px
   max-width: 1200px
