arrow style fix

--- a/src/css/app.sass
+++ b/src/css/app.sass
@@ -139,6 +139,12 @@ body.body--dark
   -webkit-user-select: none
   user-select: none
 
+.list-arrow
+  font-size: 1.8em
+  margin-top: -3px
+  margin-left: -8px
+  color: #666666
+
 .pageContainer
   flex: 0 1 1200px
   max-width: 1200px
