--- a/src/css/app.sass
+++ b/src/css/app.sass
@@ -5,6 +5,9 @@
 a
  color: rgb(100, 111, 211)
  text-decoration: none
+ transition: 400ms color ease
+ &:hover
+   color: $secondary
 
 .toolbar
   background: radial-gradient( circle at 50% 50%, rgba(97, 8, 183, 1) 1%, rgba(0, 188, 212, 1) 53%, rgba(213, 109, 213, 1) 100%)
