better responsive for layout, better responsive for ERC transfers on trx page

--- a/src/css/app.sass
+++ b/src/css/app.sass
@@ -245,7 +245,25 @@ body.body--dark
     padding: 4px !important
 
 @media only screen and (max-width: 550px)
+  #connect-button button
+    font-size: 0.9em
+    padding: 4px 10px
+  #dark-mode-toggle
+    padding-right: 5px
+    .q-icon
+      font-size: 1.3em
+  #logo
+    .text-h5
+      font-size: 1.3rem
+    img
+      width: 32px
+  .title
+    font-size: 1.7rem
   .selectorContainer .text-h6
     font-size: 0.8rem
   .q-input
     font-size: 1.2rem
+
+@media only screen and (max-width: 400px)
+  .title
+    font-size: 1.5rem
