--- a/src/css/app.sass
+++ b/src/css/app.sass
@@ -226,6 +226,9 @@ body.body--dark
 .tableWrapper
   max-width: 100vw
 
+@media screen and (max-width: 750px)
+  .taskbarSearch
+    display: none
 @media screen and (max-width: 650px)
   body
     font-size: 12px
@@ -245,6 +248,8 @@ body.body--dark
     padding: 4px !important
 
 @media only screen and (max-width: 550px)
+  .q-tab__label
+    font-size: 11px
   #connect-button button
     font-size: 0.9em
     padding: 4px 10px
@@ -267,3 +272,8 @@ body.body--dark
 @media only screen and (max-width: 400px)
   .title
     font-size: 1.5rem
+  #logo
+    .text-h5
+      font-size: 1.1rem
+    img
+      width: 24px
