more responsive fixes

--- a/src/css/app.sass
+++ b/src/css/app.sass
@@ -248,6 +248,9 @@ body.body--dark
     padding: 4px !important
 
 @media only screen and (max-width: 550px)
+  .homeInfo
+    .text-h6
+      font-size: 1.3em
   .q-tab__label
     font-size: 11px
   #connect-button button
@@ -266,10 +269,15 @@ body.body--dark
     font-size: 1.7rem
   .selectorContainer .text-h6
     font-size: 0.8rem
-  .q-input
-    font-size: 1.2rem
 
 @media only screen and (max-width: 400px)
+  .homeInfo
+    .text-h6
+      font-size: 1em
+    .text-subtitle2
+      font-size: 1.1em
+    .q-pa-md
+      padding: 5px
   .title
     font-size: 1.5rem
   #logo
