--- a/src/css/app.sass
+++ b/src/css/app.sass
@@ -187,6 +187,11 @@ body.body--dark
 .q-dialog__inner > div
   border-radius: 6px
 
+.address-yellow a
+  color: #66aeff
+body.body--dark .address-yellow a
+  color: $yellow
+
 .tableWrapper .content-container
   border-radius: 6px
 
