--- a/src/css/app.sass
+++ b/src/css/app.sass
@@ -187,9 +187,9 @@ body.body--dark
 .q-dialog__inner > div
   border-radius: 6px
 
-.address-yellow a
+.address-highlight a
   color: #66aeff
-body.body--dark .address-yellow a
+body.body--dark .address-highlight a
   color: $yellow
 
 .tableWrapper .content-container
