UI ref, home info ref, ...

--- a/src/css/app.sass
+++ b/src/css/app.sass
@@ -57,6 +57,7 @@ body
 
 body.body--light
   background: #fafafa
+  background-image: url(../assets/background.svg) !important
 
   .bgNormal
     background: white
@@ -68,6 +69,9 @@ body.body--light
     top: 0
     left: 0
     z-index: 0
+
+  .c-footer
+    color: $white
 
   .jsonViewer
     color: $purpleDarkMode
@@ -155,6 +159,7 @@ body.body--dark
 .pageContainer
   flex: 0 1 1200px
   max-width: 1200px
+  margin: auto
 
 .slim-scrollbar
   &::-webkit-scrollbar
