--- a/src/css/quasar.variables.sass
+++ b/src/css/quasar.variables.sass
@@ -17,7 +17,7 @@ $dark-1         : #23195e
 
 $grey-0         : #d4ceeb
 
-$primary        : #4190EB
+$primary        : #1db0de
 $secondary      : #8591FD
 $accent         : #2fd7fe
 
