--- a/src/css/app.sass
+++ b/src/css/app.sass
@@ -71,9 +71,6 @@ body.body--light
     left: 0
     z-index: 0
 
-  .c-footer
-    color: $white
-
   .jsonViewer
     color: $purpleDarkMode
     max-width: 100vw
@@ -161,6 +158,7 @@ body.body--dark
   flex: 0 1 1200px
   max-width: 1200px
   margin: auto
+  user-select: none
 
 .slim-scrollbar
   &::-webkit-scrollbar
