title color refactor

--- a/src/css/app.sass
+++ b/src/css/app.sass
@@ -3,7 +3,7 @@
 @import './dataCard.sass'
 
 a
- color: rgb(100, 111, 211)
+ color: $secondary
  text-decoration: none
  transition: 400ms color ease
  &:hover
