--- a/src/css/quasar.variables.sass
+++ b/src/css/quasar.variables.sass
@@ -17,8 +17,8 @@ $dark-1         : #23195e
 
 $grey-0         : #d4ceeb
 
-$primary        : #1db0de
-$secondary      : #8591FD
+$primary        : #FFFFFF
+$secondary      : #646FD3
 $accent         : #2fd7fe
 
 $dark           : #282828
