--- a/src/css/quasar.variables.sass
+++ b/src/css/quasar.variables.sass
@@ -19,7 +19,7 @@ $grey-0         : #d4ceeb
 
 $primary        : #FFFFFF
 $secondary      : #646FD3
-$accent         : #2fd7fe
+$accent         : #1db0de
 
 $dark           : #282828
 
