--- a/src/css/dataCard.sass
+++ b/src/css/dataCard.sass
@@ -6,7 +6,7 @@
   gap: 10px
   .dataCardItem
     background: #0000001e
-    width: 7rem
+    min-width: 8rem
     display: flex
     flex-direction: column
     align-items: center
