add expand/fold toggle for JSON viewer

--- a/src/css/app.sass
+++ b/src/css/app.sass
@@ -232,6 +232,8 @@ body.body--dark
   color: $red !important
 .vjs-tree-list
   height: auto !important
+.vjs-tree.is-virtual .vjs-tree-node
+  white-space: normal !important
 
 @media screen and (max-width: 1440px)
   .source-container.fullscreen
