change expansion item header color

--- a/src/css/app.sass
+++ b/src/css/app.sass
@@ -234,6 +234,15 @@ body.body--dark
   height: auto !important
 .vjs-tree.is-virtual .vjs-tree-node
   white-space: normal !important
+.q-expansion-item__container .q-item__section--side
+  padding: 0 !important
+.q-expansion-item__container .q-item.disabled, .q-expansion-item__container .q-item.disabled *
+  opacity: 1 !important
+  cursor: initial !important
+.q-expansion-item__container .q-item
+  background: rgba(103, 110, 203, 0.08)
+.body--dark .q-expansion-item__container .q-item
+  background: rgba(47, 60, 156, 0.11)
 
 @media screen and (max-width: 1440px)
   .source-container.fullscreen
