force max width to none on nft videos

--- a/src/css/app.sass
+++ b/src/css/app.sass
@@ -217,6 +217,9 @@ body.body--dark
   top: 50px
   z-index: 222
 
+.q-media
+  max-width: none !important
+
 .vjs-tree.source-container
     padding: 20px
 
