--- a/src/css/app.sass
+++ b/src/css/app.sass
@@ -218,7 +218,7 @@ body.body--dark
   z-index: 222
 
 .q-media
-  max-width: none !important
+  max-width: 280px !important
 
 .vjs-tree.source-container
     padding: 20px
