changed account / address page navigation: added dropdowns to tab menu (WIP)

--- a/src/css/app.sass
+++ b/src/css/app.sass
@@ -13,6 +13,13 @@ a
   background: radial-gradient( circle at 50% 50%, rgba(97, 8, 183, 1) 1%, rgba(0, 188, 212, 1) 53%, rgba(213, 109, 213, 1) 100%)
   color: $purpleDarkMode
 
+.q-btn:hover .q-focus-helper, .q-btn:focus .q-focus-helper
+  opacity: 0 !important
+
+.q-btn .q-focus-helper
+  background: inherit
+  opacity: 0 !important
+
 .q-header
   margin:10px
 
