fixing the color for the text on checkbox

--- a/src/css/components/_notification.sass
+++ b/src/css/components/_notification.sass
@@ -71,7 +71,7 @@ $notify-info: #008888
         margin: 2rem 0 0 2rem
         input
             margin-right: 0.5rem
-        span
+        label
             color: var(--text-color, #000)
             @include text--paragraph
     &__header
