--- a/src/css/app.scss
+++ b/src/css/app.scss
@@ -8,6 +8,14 @@ body {
     font-family: "silkaregular", sans-serif;
 }
 
+body.body--light {
+    --grey-text-color: #{$grey-7};
+}
+
+body.body--dark {
+    --grey-text-color: #{$grey-5};
+}
+
 a {
     color: var(--q-primary);
     text-decoration: none;
