cleanup, finish account dropdown

--- a/src/css/app.scss
+++ b/src/css/app.scss
@@ -10,10 +10,14 @@ body {
 
 body.body--light {
     --grey-text-color: #{$grey-7};
+    --border-color: #{$grey-5};
+    --text-color: #{$dark};
 }
 
 body.body--dark {
     --grey-text-color: #{$grey-5};
+    --border-color: #{$grey-7};
+    --text-color: white;
 }
 
 a {
