--- a/src/css/app.scss
+++ b/src/css/app.scss
@@ -14,6 +14,7 @@ body.body--light {
     --grey-text-color: #{$grey-7};
     --border-color: #{$grey-5};
     --text-color: #{$dark};
+    --invert-text-color: white;
 
     a:hover {
         color: color.scale($primary, $lightness: -50%);
@@ -24,6 +25,7 @@ body.body--dark {
     --grey-text-color: #{$grey-5};
     --border-color: #{$grey-7};
     --text-color: white;
+    --invert-text-color: #{$dark};
 
     a:hover {
         color: color.scale($primary, $lightness: +30%);
