adjustment in tab color

--- a/src/css/global/_colors.scss
+++ b/src/css/global/_colors.scss
@@ -6,5 +6,5 @@ $a-hover-light: color.scale($primary, $lightness: -50%);
 $a-hover-dark: color.scale($primary, $lightness: +30%);
 $grey: #909090;
 
-$tab-active-light: color.scale($primary, $lightness: -20%);
+$tab-active-light: color.scale($primary, $lightness: +20%);
 $tab-active-dark: $primary;
