--- a/src/css/app.scss
+++ b/src/css/app.scss
@@ -21,7 +21,9 @@ body.body--light {
     --tab-bg-color: #{$grey-3};
     --active-tab-bg-color: #{$tab-active-light};
     --active-tab-text-color: white;
-    
+
+    --q-primary: #2a8de3 !important;
+    --q-secondary: #8B3F98 !important;
 
     a:hover {
         color: $a-hover-light;
@@ -36,6 +38,9 @@ body.body--dark {
     --tab-bg-color: #{$grey-10};
     --active-tab-bg-color: #{#{$tab-active-dark}};
     --active-tab-text-color: white;
+
+    --q-primary: #2a8de3 !important;
+    --q-secondary: #8B3F98 !important;
 
     a:hover {
         color: $a-hover-dark;
