addressing some of the new requirements

--- a/src/css/app.scss
+++ b/src/css/app.scss
@@ -42,6 +42,8 @@ body.body--dark {
     --q-primary: #2a8de3 !important;
     --q-secondary: #8B3F98 !important;
 
+    --q-dark: #181818;
+
     a:hover {
         color: $a-hover-dark;
     }
