Fixing the shadows of the cards

--- a/src/css/app.scss
+++ b/src/css/app.scss
@@ -73,3 +73,8 @@ a {
 .q-card {
     border-radius: 12px;
 }
+
+// This allow the q-card to project shadow outside the tab panel container
+.q-panel.scroll {
+    overflow: var(--v-overflow, scroll);
+}
