--- a/src/css/components/_json-viewer.scss
+++ b/src/css/components/_json-viewer.scss
@@ -10,6 +10,10 @@ body.body--light .jsonViewer {
     background-color: transparent;
 }
 
+.source-container{
+    @include scroll-bar;
+}
+
 body.body--dark .source-container {
     background-color: black;
 }
