--- a/src/css/app.scss
+++ b/src/css/app.scss
@@ -81,3 +81,13 @@ a {
 .q-card--dark {
         box-shadow: 0 0.5rem 1.2rem rgba(82, 85, 85, 0.1);
 }
+
+.q-expansion-item{
+    .q-item{
+        background: #fff;
+
+        &--dark{
+            background: #212121;
+        }
+    }
+}
