--- a/src/css/app.scss
+++ b/src/css/app.scss
@@ -8,7 +8,7 @@
 body {
     --top-bar-height: 48px;
     --bottom-bar-height: 52px;
-    font-size: 16px;
+    font-size: .9em;
     font-family: "silkaregular", sans-serif;
 }
 
@@ -104,5 +104,13 @@ a {
 @-moz-document url-prefix() {
     body {
       font-size: 16px;
+    }
+}
+
+
+.q-tabs__arrow {
+    top: 12px !important;
+    &--right {
+        top: 12px !important;
     }
 }
