--- a/src/css/app.scss
+++ b/src/css/app.scss
@@ -15,6 +15,7 @@ body {
 body.body--light {
     --border-color: #{$grey-3};
     --text-color: #{$dark};
+    --muted-text-color: #{$grey-3};
     --invert-text-color: white;
     --grey-text-color: #{$grey-7};
     --tab-bg-color: #{$grey-3};
@@ -35,6 +36,7 @@ body.body--light {
 body.body--dark {
     --border-color: #{$grey-9};
     --text-color: white;
+    --muted-text-color: #{$grey-8};
     --invert-text-color: #{$dark};
     --grey-text-color: #{$grey-5};
     --tab-bg-color: #{$grey-10};
