--- a/src/css/global/_mixins.scss
+++ b/src/css/global/_mixins.scss
@@ -17,6 +17,9 @@
         font-size: 1.4rem;
         font-weight: bold;
     }
+    &-sub-title {
+        font-size: 1rem;
+    }
 }
 
 @mixin page-header-nav-btn {
