--- a/src/css/global/_mixins.scss
+++ b/src/css/global/_mixins.scss
@@ -8,17 +8,14 @@
 
 @mixin page-header {
     display: flex;
+    flex-direction: column;
     justify-content: left;
-    gap: 10px;
     align-items: baseline;
     margin-bottom: 1.5rem;
     vertical-align: text-bottom;
     &-title {
         font-size: 1.4rem;
         font-weight: bold;
-    }
-    &-sub-title {
-        font-size: 1rem;
     }
 }
 
@@ -141,4 +138,11 @@
         background: rgba(148, 148, 148, 0.1);
         border: 1px solid #949494 !important;
     }
+
+    &.to {
+        color: rgb(0, 131, 164);
+        background: rgba(0, 134, 161, 0.1);
+        border: 1px solid rgb(0, 134, 161);
+    }
+
 }
