--- a/src/css/app.scss
+++ b/src/css/app.scss
@@ -15,6 +15,8 @@ body {
 body.body--light {
     --border-color: #{$grey-3};
     --text-color: #{$dark};
+    --bg-color: white;
+    --header-bg-color: {$grey-3};
     --muted-text-color: #{$grey-3};
     --invert-text-color: white;
     --grey-text-color: #{$grey-7};
@@ -38,6 +40,8 @@ body.body--light {
 body.body--dark {
     --border-color: #{$grey-9};
     --text-color: white;
+    --bg-color: #181818;
+    --header-bg-color: #{$grey-10};
     --muted-text-color: #{$grey-8};
     --invert-text-color: #{$dark};
     --grey-text-color: #{$grey-5};
