--- a/src/css/components/_notification.scss
+++ b/src/css/components/_notification.scss
@@ -84,13 +84,13 @@ $notify-info: #008888;
       margin-right: 0.5rem;
     }
     label {
-      color: black;
+      color: var(--text-color, black);
       @include text--paragraph;
     }
   }
   &__header {
     height: 8px;
-    background-color: var(--notify-color);
+    background-color: var(--notify-color,);
     // we need to animate the width from 100% 100% to 0% in 5s and stay there
     animation: var(--c-notify__header--animation);
   }
@@ -114,7 +114,7 @@ $notify-info: #008888;
     }
   }
   &__message {
-    color: black;
+    color: var(--text-color, black);
     padding: var(--c-notify__message--padding);
     text-align: var(--c-notify__message--align, center);
     span {
@@ -126,7 +126,7 @@ $notify-info: #008888;
     }
   }
   &__action-btn {
-    color: black;
+    color: var(--text-color, black);
     &--hide {
       color: transparent;
       background-color: transparent;
