better contrast was added to the ABI JSON tree display component

--- a/src/css/app.scss
+++ b/src/css/app.scss
@@ -62,6 +62,12 @@ body.body--dark {
     a:hover {
         color: $a-hover-dark;
     }
+
+    .vjs-tree-node.is-highlight,.vjs-tree-node:hover{
+        background-color:#313436
+    }
+
+    
 }
 
 a {
