--- a/src/css/app.scss
+++ b/src/css/app.scss
@@ -34,6 +34,11 @@ body.body--light {
 
     --odd-row-bg-color: #{$grey-3};
 
+    --notify-success: #255B00;
+    --notify-error: #880000;
+    --notify-neutral: #4D4D4D;
+    --notify-info: #008888;
+
     a:hover {
         color: $a-hover-light;
     }
@@ -62,6 +67,11 @@ body.body--dark {
     --odd-row-bg-color: #{$grey-10};
 
     --q-dark: #181818;
+
+    --notify-success: #469d0d;
+    --notify-error: #b30909;
+    --notify-neutral: #858585;
+    --notify-info: #15baba;
 
     a:hover {
         color: $a-hover-dark;
