adding some comments

--- a/src/css/app.scss
+++ b/src/css/app.scss
@@ -34,6 +34,7 @@ body.body--light {
 
     --odd-row-bg-color: #{$grey-3};
 
+    // notify component colors
     --notify-success: #255B00;
     --notify-error: #880000;
     --notify-neutral: #4D4D4D;
@@ -68,6 +69,7 @@ body.body--dark {
 
     --q-dark: #181818;
 
+    // notify component colors
     --notify-success: #469d0d;
     --notify-error: #b30909;
     --notify-neutral: #858585;
